syntax = "proto3";

option java_package = "com.infomaximum.cluster.core.service.transport.network.grpc.struct";
option java_multiple_files = true;

message PNetPackage  {
  oneof impl {
    PNetPackageHandshakeRequest handshakeRequest = 1;
    PNetPackageHandshakeResponse handshakeResponse= 2;
    PNetPackageRequest request = 3;
    PNetPackageResponse response = 4;
    PNetPackageProcessing responseProcessing = 5;
    PNetPackageUpdateNode updateNode = 6;
    PNetPackagePing ping = 7;
    PNetPackagePong pong = 8;
  }
}

message PNetPackageHandshakeRequest  {
  sfixed64 channelIdMostSigBits = 1;//channel uuid
  sfixed64 channelIdLeastSigBit = 2;//channel uuid
  PNetPackageHandshakeNode node = 3;
}

message PNetPackageHandshakeResponse  {
  PNetPackageHandshakeNode node = 1;
}

message PNetPackageHandshakeNode  {
  string name = 1;//node name
  sfixed64 runtimeIdMostSigBits = 2;//node runtime uuid
  sfixed64 runtimeIdLeastSigBits = 3;//node runtime uuid
  repeated PNetPackageComponent pNetPackageComponents = 4;
}

message PNetPackageComponent  {
  string uuid = 1;
  int32 id = 2;
  repeated string classNameRControllers = 3;
}

message PNetPackageUpdateNode  {
  repeated PNetPackageComponent pNetPackageComponents = 1;
}

message PNetPackageRequest {
  int32 packageId = 1;

  int32 targetComponentId = 2;
  string rControllerClassName = 3;
  int32 methodKey = 4;
  repeated bytes args = 5;
}

message PNetPackageResponse {
  int32 packageId = 1;

  bytes result = 2;
  bytes exception = 3;
}

message PNetPackageProcessing {
  int32 packageId = 1;
}

message PNetPackagePing  {
  sfixed64 time = 1;
}

message PNetPackagePong  {
  sfixed64 time = 1;
}